Fixed issue with drop down menus inside stream status banner being too big. (KILL ME) Bump 1.6.11

--- a/static/web/css/style.scss
+++ b/static/web/css/style.scss
@@ -1650,7 +1650,7 @@ table#inbox td.from a {
     position: relative;
     background: rgba(0,0,0,0.5);
 
-    a {
+    & > a {
       background-size: contain;
       border-radius: 5px 5px 0 5px;
       display: block;
